<?xml version="1.0" encoding="utf-8"?>
<!--
/*******************************************************************************
* Copyright (c) 2014-2015 IBM Corp.
*
* All rights reserved. This program and the accompanying materials
* are made available under the terms of the Eclipse Public License v1.0
* and Eclipse Distribution License v1.0 which accompany this distribution.
*
* The Eclipse Public License is available at
*   http://www.eclipse.org/legal/epl-v10.html
* and the Eclipse Distribution License is available at
*   http://www.eclipse.org/org/documents/edl-v10.php.
*
* Contributors:
*    Mike Robertson - initial contribution
*******************************************************************************/
-->
<resources>
    <string name="app_name">Track</string>
    <string name="action_settings">Settings</string>

    <!-- Generic Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Error messages -->
    <string name="broker_unavailable_check_connectivity">Server is unavailable. Please check your connectivity and try again</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>

    <!-- Menu Actions -->
    <string name="login_label">LOGIN</string>
    <string name="iot_label">IOT</string>
    <string name="log_label">LOG</string>
    <string name="accel_label">Pause/Resume</string>
    <string name="home_label">Open Home</string>
    <string name="profiles_label">Open Profiles</string>
    <string name="web_label">Open Quickstart</string>
    <string name="clear_profiles_label">Clear Profiles</string>
    <string name="clear_log_label">Clear Log</string>
    <string name="tutorial_label">Open Tutorial</string>

    <!-- Begin Login Fragment -->
    <string name="showToken_button">Show Auth Token</string>
    <string name="hideToken_button">Hide Auth Token</string>
    <string name="useSSL_button">Use SSL</string>
    <string name="activate_button">Connect</string>
    <string name="deactivate_button">Disconnect</string>

    <string name="device_id">DeviceID: -</string>
    <string name="is_connected">Connected to IoT: No</string>

    <string name="organization_hint">Organization ID</string>
    <string name="device_id_hint">Device ID</string>
    <string name="auth_token_hint">Auth Token</string>
    <!-- End Login Fragment -->

    <!-- Begin IoT Fragment -->
    <string name="command_info">Commands</string>
    <string name="messages_published">Messages Published: 0</string>
    <string name="trip_id">Trip ID: 0</string>
    <string name="location_accuracy">Location Accuracy: 0</string>
    <string name="messages_received">Messages Received: 0</string>
    <string name="device_id_iot">Device ID: </string>
    <string name="device_id_iot_value">Device ID</string>
    <string name="send_text">Stop/Route Commands</string>
    <string name="receive_commands">Receive Your Route Commands</string>
    <!-- End IoT Fragment -->

    <!-- Begin Settings Activity -->
    <string name="organization_setting">Organization: </string>
    <string name="device_id_setting">Device ID: </string>
    <string name="auth_token_setting">Auth Token: </string>

    <string name="organization_value">Organization</string>
    <string name="device_id_value">Device ID</string>
    <string name="auth_token_value">Auth Token</string>

    <string name="save_button">Save Settings</string>

    <!-- End Settings Activity -->

    <!-- Profiles activity dialog -->
    <string name="save_dialog_title">Save Profile</string>
    <string name="save_dialog_text">Enter a name for the profile.</string>
    <string name="save_dialog_ok">Save</string>

    <string name="profile_exists_title">Profile Name Exists</string>
    <string name="profile_exists_text">The profile name you have entered already exists. Overwrite?</string>
    <!-- End Properties activity dialog -->

    <string name="alert_dialog_title">Received Alert</string>

    <!-- IoT Fragment dialog -->
    <string name="send_text_title">Are you sure you want to stop.</string>
    <string name="send_text_text">Click ok to stop.</string>
    <string name="send_text_command">Click ok to get commands.</string>
    <string name="send_text_invalid">Text messages are disabled while connected to QuickStart.</string>
    <!-- End IoT Fragment dialog -->

    <!-- Login Fragment dialog -->
    <string name="connect_props_title">Unable to connect</string>
    <string name="connect_props_text">Organization ID, Device ID and Auth Token must be set in order to connect.</string>
    <!-- End Login Fragment dialog -->

</resources>
