<?xml version="1.0" encoding="utf-8"?>
<!--
/*******************************************************************************
* Copyright (c) 2014-2015 IBM Corp.
*
* All rights reserved. This program and the accompanying materials
* are made available under the terms of the Eclipse Public License v1.0
* and Eclipse Distribution License v1.0 which accompany this distribution.
*
* The Eclipse Public License is available at
*   http://www.eclipse.org/legal/epl-v10.html
* and the Eclipse Distribution License is available at
*   http://www.eclipse.org/org/documents/edl-v10.php.
*
* Contributors:
*    Mike Robertson - initial contribution
*******************************************************************************/
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/ActivityBackground"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.ibm.iot.android.iotstarter.fragments.IoTPagerFragment"
        >

    <com.ibm.iot.android.iotstarter.views.DrawingView
        android:id="@+id/drawing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="128dp"></com.ibm.iot.android.iotstarter.views.DrawingView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_id_iot"
                android:id="@+id/deviceIDSettingIoT"
                />
        <View android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1" />
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_id_iot_value"
                android:id="@+id/deviceIDIoT"
                />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:layout_weight="1"
                  android:gravity="center|top"
                  android:orientation="vertical">
        <TextView
            style="@style/MyActionBarTitleText"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_id"
            android:id="@+id/tripid"
            />
        <TextView
            style="@style/MyActionBarTitleText"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_accuracy"
            android:id="@+id/location"
            />
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/command_info"
                android:id="@+id/textid"
                />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/messagesPublishedView"
            style="@style/MyActionBarTitleText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/messages_published"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/messagesReceivedView"
            style="@style/MyActionBarTitleText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/messages_received"
            android:textAlignment="center" />


        <!--<Button
            style="@style/BottomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendCommand"
            android:text="@string/receive_commands"/>-->
        <Button
            android:id="@+id/sendText"
            style="@style/BottomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_text" />
    </LinearLayout>
</RelativeLayout>